package eapli.base.ordermanagement.domain;

import eapli.framework.domain.model.ValueObject;

import java.io.Serializable;

public class Payment implements ValueObject, Serializable {

}
