package eapli.base.productmanagement.domain;

import eapli.framework.domain.model.ValueObject;

import java.io.Serializable;

public class Photo implements ValueObject, Serializable {
    private static final long serialVersionUID = 1L;
}
